--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="javascript.js"></script>
+  <script src="javascript.js" defer></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Rock, Paper & Scissors</h1>
+  <h2>The first to reach a score of 5 wins the game!</h2>
+  <button class="btn" id="rock">ROCK!</button>
+  <button class="btn" id="paper">PAPER!</button>
+  <button class="btn" id="scissors">SCISSORS!</button>
+  <div class="text-line">
+    <p class="text" id="userScore">Player Score:</p>
+    <p class="text" id="computerScore">Computer Score:</p>
+  </div>
+  <div>
+    <p class="text" id="output"></p>
+  </div>
 </body>
 </html>
